--- a/HW1/Config/DefaultInput.ini
+++ b/HW1/Config/DefaultInput.ini
@@ -83,6 +83,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="StopRolling",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
 +AxisMappings=(AxisName="MoveLeftRight",Scale=1.000000,Key=A)
 +AxisMappings=(AxisName="MoveLeftRight",Scale=1.000000,Key=Left)
 +AxisMappings=(AxisName="MoveLeftRight",Scale=-1.000000,Key=D)
@@ -92,7 +93,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveForwardBack",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForwardBack",Scale=-1.000000,Key=Down)
 +AxisMappings=(AxisName="Turn Right / Left Mouse",Scale=1.000000,Key=MouseX)
-+AxisMappings=(AxisName="Look Up / Down Mouse",Scale=1.000000,Key=MouseY)
++AxisMappings=(AxisName="Look Up / Down Mouse",Scale=-1.000000,Key=MouseY)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
