--- a/HW1/Config/DefaultEngine.ini
+++ b/HW1/Config/DefaultEngine.ini
@@ -9,6 +9,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/Level1.Level1
 GameDefaultMap=/Game/Maps/Level1.Level1
+GlobalDefaultGameMode=/Game/Blueprints/RollingGameMode.RollingGameMode_C
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/Rolling")
