--- a/HW1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HW1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -136,7 +136,7 @@ bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
 [EditorStartup]
-LastLevel=/Game/Maps/Level1
+LastLevel=/Game/Maps/Level3
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -205,9 +205,9 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/Level2
-MRUItem1=/Game/Maps/Level1
-MRUItem2=/Game/Maps/Level3
+MRUItem0=/Game/Maps/Level3
+MRUItem1=/Game/Maps/Level2
+MRUItem2=/Game/Maps/Level1
 MRUItem3=/Game/StarterContent/HDRI/HDRI_Epic_Courtyard_Daylight
 MRUItem4=/Game/PhotoR_Backgrounds/Materials/Afghan/afghan_mountain_a
 MRUItem5=/Game/PhotoR_Backgrounds/Materials/Splat_maps/mountain_a_splat
@@ -1077,6 +1077,21 @@ Level2_C.Input=True
 Level2_C.HLOD=True
 Level2_C.WorldPartition=True
 Level2_C.Events=True
+Level3_C.Tick=True
+Level3_C.Replication=True
+Level3_C.Actor=True
+Level3_C.Input=True
+Level3_C.HLOD=True
+Level3_C.WorldPartition=True
+Level3_C.Events=True
+SkyLightComponent.TransformCommon=True
+SkyLightComponent.Light=True
+SkyLightComponent.DistanceFieldAmbientOcclusion=True
+SkyLightComponent.AtmosphereAndCloud=True
+SkyLightComponent.RayTracing=True
+SkyLightComponent.Rendering=True
+SkyLightComponent.Tags=True
+SkyLightComponent.Cooking=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Rolling/Materials/M_Pink_Checker.M_Pink_Checker=0
@@ -1104,6 +1119,7 @@ Level2_C.Events=True
 /Game/PhotoR_Backgrounds/Materials/Afghan/afghan_mountain_a.afghan_mountain_a=0
 /Game/Maps/Level1_BuiltData.Level1_BuiltData=0
 /Game/Maps/Level2.Level2:PersistentLevel.Level2=0
+/Game/Maps/Level3.Level3:PersistentLevel.Level3=0
 
 [MaterialEditor]
 PrimType=1
@@ -1166,7 +1182,7 @@ bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 
 [RootWindow]
-ScreenPosition=X=446.000 Y=54.000
+ScreenPosition=X=904.000 Y=232.000
 WindowSize=X=1292.000 Y=732.000
 InitiallyMaximized=True
 
@@ -2086,9 +2102,9 @@ LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
-MRUItem0=/Game/Maps/Level2
-MRUItem1=/Game/Maps/Level1
-MRUItem2=/Game/Maps/Level3
+MRUItem0=/Game/Maps/Level3
+MRUItem1=/Game/Maps/Level2
+MRUItem2=/Game/Maps/Level1
 MRUItem3=/Game/Maps/Untitled
 
 [LightingBuildOptions]
@@ -2194,26 +2210,26 @@ NiagaraEditorSettings="\"Object.Niagara Colors.ActionColors\" "
 DeveloperSettings=
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Materials/M_Glass.M_Glass;
+RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Rough.M_CobbleStone_Rough;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_Old.M_Brick_Clay_Old;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Hex_Tile_Pulse.M_Tech_Hex_Tile_Pulse;
+RecentlyPlaced=/Game/StarterContent/Materials/M_ColorGrid_LowSpec.M_ColorGrid_LowSpec;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Rust.M_Metal_Rust;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Gold.M_Metal_Gold;
+RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Smooth.M_CobbleStone_Smooth;
 RecentlyPlaced=/Game/PhotoR_Backgrounds/Meshes/360d_Horizon/Afghan_Mountain_a/PR_afgan_mountain_a_D.PR_afgan_mountain_a_D;
 RecentlyPlaced=/Game/PhotoR_Backgrounds/Meshes/billboard.billboard;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Sandstone.M_Rock_Sandstone;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Marble_Polished.M_Rock_Marble_Polished;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Basalt.M_Rock_Basalt;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Gravel.M_Ground_Gravel;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Rust.M_Metal_Rust;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Concrete_Tiles.M_Concrete_Tiles;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Moss.M_Ground_Moss;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Gold.M_Metal_Gold;
-RecentlyPlaced=/Game/StarterContent/Materials/M_ColorGrid_LowSpec.M_ColorGrid_LowSpec;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Copper.M_Metal_Copper;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Grass.M_Ground_Grass;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_New.M_Brick_Clay_New;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Steel.M_Metal_Steel;
-RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Pebble.M_CobbleStone_Pebble;
-RecentlyPlaced=/Game/StarterContent/Materials/M_AssetPlatform.M_AssetPlatform;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Glass.M_Glass;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Panel.M_Tech_Panel;
 
 [MaterialInstanceEditor]
 bShowGrid=True
