--- a/HW1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HW1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -136,7 +136,7 @@ bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
 [EditorStartup]
-LastLevel=/Game/Maps/Level3
+LastLevel=/Game/Maps/Level5
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -205,26 +205,26 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/Level3
-MRUItem1=/Game/Maps/Level2
+MRUItem0=/Game/Maps/Level5
+MRUItem1=/Game/Maps/Level4
 MRUItem2=/Game/Maps/Level1
-MRUItem3=/Game/StarterContent/HDRI/HDRI_Epic_Courtyard_Daylight
-MRUItem4=/Game/PhotoR_Backgrounds/Materials/Afghan/afghan_mountain_a
-MRUItem5=/Game/PhotoR_Backgrounds/Materials/Splat_maps/mountain_a_splat
-MRUItem6=/Game/Maps/Untitled
-MRUItem7=/Game/Blueprints/RollingGameMode
-MRUItem8=/Game/Blueprints/bpSpherePawn
-MRUItem9=/Game/StarterContent/Shapes/Shape_Cone
-MRUItem10=/Game/Rolling/Meshes/BallMesh
-MRUItem11=/Game/Rolling/Materials/M_Pink_Checker
-MRUItem12=/Game/Rolling/Materials/PM_CUSTOM
-MRUItem13=/Game/Rolling/Materials/PM_Ball
-MRUItem14=/Game/AutomotiveWinterScene/HDRI/autumn_hockey_4k
-MRUItem15=/Game/StarterContent/Shapes/Shape_Torus
-MRUItem16=/Game/StarterContent/Shapes/Shape_Sphere
-MRUItem17=/Game/StarterContent/Textures/T_Wood_Floor_Walnut_D
-MRUItem18=/Game/StarterContent/Textures/T_Spark_Core
-MRUItem19=/Game/Blueprints/NewPlaceableObjects/Cylinder
+MRUItem3=/Game/Maps/Level3
+MRUItem4=/Game/Maps/Level2
+MRUItem5=/Game/StarterContent/HDRI/HDRI_Epic_Courtyard_Daylight
+MRUItem6=/Game/PhotoR_Backgrounds/Materials/Afghan/afghan_mountain_a
+MRUItem7=/Game/PhotoR_Backgrounds/Materials/Splat_maps/mountain_a_splat
+MRUItem8=/Game/Maps/Untitled
+MRUItem9=/Game/Blueprints/RollingGameMode
+MRUItem10=/Game/Blueprints/bpSpherePawn
+MRUItem11=/Game/StarterContent/Shapes/Shape_Cone
+MRUItem12=/Game/Rolling/Meshes/BallMesh
+MRUItem13=/Game/Rolling/Materials/M_Pink_Checker
+MRUItem14=/Game/Rolling/Materials/PM_CUSTOM
+MRUItem15=/Game/Rolling/Materials/PM_Ball
+MRUItem16=/Game/AutomotiveWinterScene/HDRI/autumn_hockey_4k
+MRUItem17=/Game/StarterContent/Shapes/Shape_Torus
+MRUItem18=/Game/StarterContent/Shapes/Shape_Sphere
+MRUItem19=/Game/StarterContent/Textures/T_Wood_Floor_Walnut_D
 
 [DetailCategories]
 PreviewMaterial.PhysicalMaterial=True
@@ -1092,6 +1092,20 @@ SkyLightComponent.RayTracing=True
 SkyLightComponent.Rendering=True
 SkyLightComponent.Tags=True
 SkyLightComponent.Cooking=True
+Level4_C.Tick=True
+Level4_C.Replication=True
+Level4_C.Actor=True
+Level4_C.Input=True
+Level4_C.HLOD=True
+Level4_C.WorldPartition=True
+Level4_C.Events=True
+Level5_C.Tick=True
+Level5_C.Replication=True
+Level5_C.Actor=True
+Level5_C.Input=True
+Level5_C.HLOD=True
+Level5_C.WorldPartition=True
+Level5_C.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Rolling/Materials/M_Pink_Checker.M_Pink_Checker=0
@@ -1120,6 +1134,8 @@ SkyLightComponent.Cooking=True
 /Game/Maps/Level1_BuiltData.Level1_BuiltData=0
 /Game/Maps/Level2.Level2:PersistentLevel.Level2=0
 /Game/Maps/Level3.Level3:PersistentLevel.Level3=0
+/Game/Maps/Level4.Level4:PersistentLevel.Level4=0
+/Game/Maps/Level5.Level5:PersistentLevel.Level5=0
 
 [MaterialEditor]
 PrimType=1
@@ -1182,7 +1198,7 @@ bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 
 [RootWindow]
-ScreenPosition=X=904.000 Y=232.000
+ScreenPosition=X=526.000 Y=276.000
 WindowSize=X=1292.000 Y=732.000
 InitiallyMaximized=True
 
@@ -2102,10 +2118,12 @@ LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
-MRUItem0=/Game/Maps/Level3
-MRUItem1=/Game/Maps/Level2
+MRUItem0=/Game/Maps/Level5
+MRUItem1=/Game/Maps/Level4
 MRUItem2=/Game/Maps/Level1
-MRUItem3=/Game/Maps/Untitled
+MRUItem3=/Game/Maps/Level3
+MRUItem4=/Game/Maps/Level2
+MRUItem5=/Game/Maps/Untitled
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -2210,26 +2228,26 @@ NiagaraEditorSettings="\"Object.Niagara Colors.ActionColors\" "
 DeveloperSettings=
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Gravel.M_Ground_Gravel;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Basic_Wall.M_Basic_Wall;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Rust.M_Metal_Rust;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Concrete_Tiles.M_Concrete_Tiles;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Gold.M_Metal_Gold;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Hex_Tile.M_Tech_Hex_Tile;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Pine.M_Wood_Pine;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Glass.M_Glass;
 RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Rough.M_CobbleStone_Rough;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_Old.M_Brick_Clay_Old;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Hex_Tile_Pulse.M_Tech_Hex_Tile_Pulse;
 RecentlyPlaced=/Game/StarterContent/Materials/M_ColorGrid_LowSpec.M_ColorGrid_LowSpec;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Rust.M_Metal_Rust;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Gold.M_Metal_Gold;
 RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Smooth.M_CobbleStone_Smooth;
 RecentlyPlaced=/Game/PhotoR_Backgrounds/Meshes/360d_Horizon/Afghan_Mountain_a/PR_afgan_mountain_a_D.PR_afgan_mountain_a_D;
 RecentlyPlaced=/Game/PhotoR_Backgrounds/Meshes/billboard.billboard;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Sandstone.M_Rock_Sandstone;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Marble_Polished.M_Rock_Marble_Polished;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Basalt.M_Rock_Basalt;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Gravel.M_Ground_Gravel;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Concrete_Tiles.M_Concrete_Tiles;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Moss.M_Ground_Moss;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Copper.M_Metal_Copper;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Grass.M_Ground_Grass;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_New.M_Brick_Clay_New;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Steel.M_Metal_Steel;
 
 [MaterialInstanceEditor]
 bShowGrid=True
@@ -2403,6 +2421,7 @@ TriggerVolume.Actor=False
 TriggerVolume.Collision=True
 TriggerVolume.BrushSettings=False
 SceneComponent.Rendering=False
+Actor.Actor=True
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
