--- a/HW1/Config/DefaultInput.ini
+++ b/HW1/Config/DefaultInput.ini
@@ -82,19 +82,22 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="StopRolling",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
-+AxisMappings=(AxisName="MoveLeftRight",Scale=1.000000,Key=A)
-+AxisMappings=(AxisName="MoveLeftRight",Scale=1.000000,Key=Left)
-+AxisMappings=(AxisName="MoveLeftRight",Scale=-1.000000,Key=D)
-+AxisMappings=(AxisName="MoveLeftRight",Scale=-1.000000,Key=Right)
-+AxisMappings=(AxisName="MoveForwardBack",Scale=1.000000,Key=W)
-+AxisMappings=(AxisName="MoveForwardBack",Scale=1.000000,Key=Up)
-+AxisMappings=(AxisName="MoveForwardBack",Scale=-1.000000,Key=S)
-+AxisMappings=(AxisName="MoveForwardBack",Scale=-1.000000,Key=Down)
-+AxisMappings=(AxisName="Turn Right / Left Mouse",Scale=1.000000,Key=MouseX)
++ActionMappings=(ActionName="StopRolling",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
 +AxisMappings=(AxisName="Look Up / Down Mouse",Scale=-1.000000,Key=MouseY)
++AxisMappings=(AxisName="MoveForwardBackPrimary",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="MoveForwardBackPrimary",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="MoveForwardBackSecondary",Scale=-1.000000,Key=Down)
++AxisMappings=(AxisName="MoveForwardBackSecondary",Scale=1.000000,Key=Up)
++AxisMappings=(AxisName="MoveLeftRightPrimary",Scale=1.000000,Key=A)
++AxisMappings=(AxisName="MoveLeftRightPrimary",Scale=-1.000000,Key=D)
++AxisMappings=(AxisName="MoveLeftRightSecondary",Scale=1.000000,Key=Left)
++AxisMappings=(AxisName="MoveLeftRightSecondary",Scale=-1.000000,Key=Right)
 +AxisMappings=(AxisName="StopRolling",Scale=1.000000,Key=LeftShift)
++AxisMappings=(AxisName="StopRolling",Scale=1.000000,Key=None)
++AxisMappings=(AxisName="Turn Right / Left Mouse",Scale=1.000000,Key=MouseX)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
