--- a/HW1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HW1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -131,7 +131,6 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentPosGridSize=0
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
@@ -142,6 +141,8 @@ None=======
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/RollingGameMode.RollingGameMode
+OpenAssetsAtExit=/Game/Blueprints/Coin.Coin
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -207,26 +208,26 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/bpSpherePawn
-MRUItem1=/Game/Blueprints/KeyBindingsUI
-MRUItem2=/Game/Maps/Level1
-MRUItem3=/Game/Maps/Level4
-MRUItem4=/Game/Maps/Level3
-MRUItem5=/Game/Maps/Level2
-MRUItem6=/Game/StarterContent/HDRI/HDRI_Epic_Courtyard_Daylight
-MRUItem7=/Game/PhotoR_Backgrounds/Materials/Afghan/afghan_mountain_a
-MRUItem8=/Game/PhotoR_Backgrounds/Materials/Splat_maps/mountain_a_splat
-MRUItem9=/Game/Maps/Untitled
-MRUItem10=/Game/Blueprints/RollingGameMode
-MRUItem11=/Game/StarterContent/Shapes/Shape_Cone
-MRUItem12=/Game/Rolling/Meshes/BallMesh
-MRUItem13=/Game/Rolling/Materials/M_Pink_Checker
-MRUItem14=/Game/Rolling/Materials/PM_CUSTOM
-MRUItem15=/Game/Rolling/Materials/PM_Ball
-MRUItem16=/Game/AutomotiveWinterScene/HDRI/autumn_hockey_4k
-MRUItem17=/Game/StarterContent/Shapes/Shape_Torus
-MRUItem18=/Game/StarterContent/Shapes/Shape_Sphere
-MRUItem19=/Game/StarterContent/Textures/T_Wood_Floor_Walnut_D
+MRUItem0=/Game/Blueprints/RollingGameMode
+MRUItem1=/Game/Blueprints/Coin
+MRUItem2=/Engine/VREditor/LaserPointer/LaserPointerMaterial
+MRUItem3=/Engine/VREditor/LaserPointer/LaserPointerMaterialInst
+MRUItem4=/Game/Blueprints/bpSpherePawn
+MRUItem5=/Game/Blueprints/Spike
+MRUItem6=/Game/Blueprints/SaveGame
+MRUItem7=/Game/Blueprints/Difficulties
+MRUItem8=/Game/Blueprints/KeyBindingsUI
+MRUItem9=/Game/Maps/Level1
+MRUItem10=/Game/Maps/Level4
+MRUItem11=/Game/Maps/Level3
+MRUItem12=/Game/Maps/Level2
+MRUItem13=/Game/StarterContent/HDRI/HDRI_Epic_Courtyard_Daylight
+MRUItem14=/Game/PhotoR_Backgrounds/Materials/Afghan/afghan_mountain_a
+MRUItem15=/Game/PhotoR_Backgrounds/Materials/Splat_maps/mountain_a_splat
+MRUItem16=/Game/Maps/Untitled
+MRUItem17=/Game/StarterContent/Shapes/Shape_Cone
+MRUItem18=/Game/Rolling/Meshes/BallMesh
+MRUItem19=/Game/Rolling/Materials/M_Pink_Checker
 
 [DetailCategories]
 PreviewMaterial.PhysicalMaterial=True
@@ -1214,6 +1215,29 @@ K2Node_FunctionEntry.Inputs=True
 K2Node_FunctionEntry.Outputs=True
 K2Node_SwitchInteger.PinOptions=True
 KeyBindingsUI_C.Default=True
+UserDefinedEnum.Description=True
+UserDefinedEnum.Enumerators=True
+SaveGame_C.Default=True
+Spike_C.Tick=True
+Spike_C.Replication=True
+Spike_C.Rendering=True
+Spike_C.Collision=True
+Spike_C.Actor=True
+Spike_C.Input=True
+Spike_C.HLOD=True
+Spike_C.WorldPartition=True
+Spike_C.Events=True
+Spike_C.TransformCommon=True
+Coin_C.Tick=True
+Coin_C.Replication=True
+Coin_C.Rendering=True
+Coin_C.Collision=True
+Coin_C.Actor=True
+Coin_C.Input=True
+Coin_C.HLOD=True
+Coin_C.WorldPartition=True
+Coin_C.Events=True
+Coin_C.Cooking=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Rolling/Materials/M_Pink_Checker.M_Pink_Checker=0
@@ -1246,6 +1270,12 @@ KeyBindingsUI_C.Default=True
 /Game/Maps/Level5.Level5:PersistentLevel.Level5=0
 None=======
 /Game/Blueprints/KeyBindingsUI.KeyBindingsUI=0
+/Game/Blueprints/Difficulties.Difficulties=0
+/Game/Blueprints/SaveGame.SaveGame=0
+/Engine/VREditor/LaserPointer/LaserPointerMaterialInst.LaserPointerMaterialInst=0
+/Engine/VREditor/LaserPointer/LaserPointerMaterial.LaserPointerMaterial=0
+/Game/Blueprints/Spike.Spike=0
+/Game/Blueprints/Coin.Coin=0
 
 [MaterialEditor]
 PrimType=1
@@ -1311,7 +1341,7 @@ bMaterialQualityUsed[3]=0
 ScreenPosition=X=526.000 Y=276.000
 ScreenPosition=X=904.000 Y=232.000
 WindowSize=X=1292.000 Y=732.000
-WindowSize=X=1308.000 Y=748.000
+WindowSize=X=1309.600 Y=749.600
 None=======
 InitiallyMaximized=True
 
@@ -2219,8 +2249,8 @@ BlueprintGraph.TimeStamp=2022.08.21-17.23.09
 BlueprintGraph.LastCompileMethod=External
 HDRIBackdrop.TimeStamp=2022.08.21-17.36.53
 HDRIBackdrop.LastCompileMethod=External
-HierarchicalLODUtilities.TimeStamp=2022.08.19-01.18.53
-HierarchicalLODUtilities.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2022.08.21-17.23.13
+HierarchicalLODUtilities.LastCompileMethod=External
 ExternalImagePicker.TimeStamp=2022.08.21-17.23.12
 ExternalImagePicker.LastCompileMethod=External
 WorldBrowser.TimeStamp=2022.08.19-01.18.58
@@ -2245,7 +2275,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [DetailCustomWidgetExpansion]
-MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Wall,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Wall,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 GeneralProjectSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Free,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Freelook,InputSettings.Bindings.AxisMappings.Turn Right / Left Mouse,InputSettings.Bindings.AxisMappings.Look Up / Down Mouse,InputSettings.Bindings.AxisMappings.MoveLeftRightPrim,InputSettings.Bindings.AxisMappings.MoveForwardBackPrim,InputSettings.Bindings.ActionMappings.StopRolling,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.StopRolling,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForwardBack,InputSettings.Bindings.AxisMappings.MoveLeftRight,InputSettings.Bindings.AxisMappings.MoveForwardBackPrimary,InputSettings.Bindings.AxisMappings.MoveForwardBackSecondary,InputSettings.Bindings.AxisMappings.MoveLeftRightPrimary,InputSettings.Bindings.AxisMappings.MoveLeftRightSecondary,InputSettings.Bindings.ActionMappings.NewActionMapping_0,
 CryptoKeysSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Free,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Freelook,InputSettings.Bindings.AxisMappings.Turn Right / Left Mouse,InputSettings.Bindings.AxisMappings.Look Up / Down Mouse,InputSettings.Bindings.AxisMappings.MoveLeftRightPrim,InputSettings.Bindings.AxisMappings.MoveForwardBackPrim,InputSettings.Bindings.ActionMappings.StopRolling,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.StopRolling,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForwardBack,InputSettings.Bindings.AxisMappings.MoveLeftRight,InputSettings.Bindings.AxisMappings.MoveForwardBackPrimary,InputSettings.Bindings.AxisMappings.MoveForwardBackSecondary,InputSettings.Bindings.AxisMappings.MoveLeftRightPrimary,InputSettings.Bindings.AxisMappings.MoveLeftRightSecondary,InputSettings.Bindings.ActionMappings.NewActionMapping_0,
@@ -2374,6 +2404,7 @@ GameplayTagsDeveloperSettings=EditorKeyboardShortcutSettings.EditorViewport.Show
 LogVisualizerSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
 K2Node_VariableGet=
 KeyBindingsUI_C=
+MaterialInstanceConstant=
 
 [DetailPropertyExpansion]
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2408,8 +2439,10 @@ FractureModeCustomizationSettings="\"Object.Fracture Mode.Fracture Mode|UI Custo
 AutomationTestSettings="\"Object.Automation.BuildPromotionTest\" \"Object.Automation.BuildPromotionTest.ImportWorkflow\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Diffuse\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Normal\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.StaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.ReimportStaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.BlendShapeMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.MorphMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SkeletalMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Animation\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Sound\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SurroundSound\" \"Object.Automation.BuildPromotionTest.OpenAssets\" \"Object.Automation.BuildPromotionTest.NewProjectSettings\" \"Object.Automation.ParticleEditorPromotionTest\" \"Object.Automation.BlueprintEditorPromotionTest\" "
 KeyBindingsUI_C=
 UserWidget=
+Coin_C=
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Spike.Spike;/Engine/Transient.ActorFactoryBlueprint_0
 RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Gravel.M_Ground_Gravel;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Basic_Wall.M_Basic_Wall;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Rust.M_Metal_Rust;
@@ -2429,10 +2462,9 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Sandstone.M_Rock_Sandstone;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Marble_Polished.M_Rock_Marble_Polished;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Basalt.M_Rock_Basalt;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Moss.M_Ground_Moss;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Copper.M_Metal_Copper;
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=1
 
@@ -2652,6 +2684,8 @@ VerticalBox.Behavior=False
 Button.Interaction=False
 Button.Accessibility=False
 EdGraph.Graph=False
+UserDefinedEnum.Enumerators=False
+Coin_C.Collision=False
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -2748,4 +2782,5 @@ MovieRendererName=
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
+DeleteConfirmationVariable_Warning=False
 
