--- a/HW1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HW1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -95,7 +95,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1914,Y=1040)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@KUIIL
 LastExecutedLaunchName=KUIIL
 LastExecutedPIEPreviewDevice=
@@ -133,16 +133,15 @@ CurrentPosGridSize=0
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [EditorStartup]
 LastLevel=/Game/Maps/Level5
-LastLevel=/Game/Maps/Level1
+LastLevel=/Game/Maps/Level5
 None=======
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/RollingGameMode.RollingGameMode
-OpenAssetsAtExit=/Game/Blueprints/Coin.Coin
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -162,7 +161,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/Maps
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -197,7 +196,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -208,26 +207,26 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/RollingGameMode
-MRUItem1=/Game/Blueprints/Coin
-MRUItem2=/Engine/VREditor/LaserPointer/LaserPointerMaterial
-MRUItem3=/Engine/VREditor/LaserPointer/LaserPointerMaterialInst
-MRUItem4=/Game/Blueprints/bpSpherePawn
-MRUItem5=/Game/Blueprints/Spike
-MRUItem6=/Game/Blueprints/SaveGame
-MRUItem7=/Game/Blueprints/Difficulties
-MRUItem8=/Game/Blueprints/KeyBindingsUI
-MRUItem9=/Game/Maps/Level1
-MRUItem10=/Game/Maps/Level4
-MRUItem11=/Game/Maps/Level3
-MRUItem12=/Game/Maps/Level2
-MRUItem13=/Game/StarterContent/HDRI/HDRI_Epic_Courtyard_Daylight
-MRUItem14=/Game/PhotoR_Backgrounds/Materials/Afghan/afghan_mountain_a
-MRUItem15=/Game/PhotoR_Backgrounds/Materials/Splat_maps/mountain_a_splat
-MRUItem16=/Game/Maps/Untitled
-MRUItem17=/Game/StarterContent/Shapes/Shape_Cone
-MRUItem18=/Game/Rolling/Meshes/BallMesh
-MRUItem19=/Game/Rolling/Materials/M_Pink_Checker
+MRUItem0=/Game/Maps/Level5
+MRUItem1=/Game/Maps/Level1
+MRUItem2=/Game/Maps/Level2
+MRUItem3=/Game/Maps/Level3
+MRUItem4=/Game/Maps/Level4
+MRUItem5=/Game/StarterContent/Audio/Starter_Background_Cue
+MRUItem6=/Game/Blueprints/Moving_Platform3
+MRUItem7=/Game/Blueprints/Moving_Platform2
+MRUItem8=/Game/Blueprints/Coin
+MRUItem9=/Game/Blueprints/bpSpherePawn
+MRUItem10=/Game/Blueprints/Moving_Platform
+MRUItem11=/Game/Blueprints/NewActorComponent
+MRUItem12=/Game/StarterContent/Materials/M_Metal_Rust
+MRUItem13=/Game/Blueprints/RollingGameMode
+MRUItem14=/Engine/VREditor/LaserPointer/LaserPointerMaterial
+MRUItem15=/Engine/VREditor/LaserPointer/LaserPointerMaterialInst
+MRUItem16=/Game/Blueprints/Spike
+MRUItem17=/Game/Blueprints/SaveGame
+MRUItem18=/Game/Blueprints/Difficulties
+MRUItem19=/Game/Blueprints/KeyBindingsUI
 
 [DetailCategories]
 PreviewMaterial.PhysicalMaterial=True
@@ -248,7 +247,7 @@ MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
 MaterialExpressionConstant3Vector.MaterialExpression=True
 MaterialExpressionConstant.MaterialExpressionConstant=True
 MaterialExpressionConstant.MaterialExpression=True
-StaticMeshActor.TransformCommon=False
+StaticMeshActor.TransformCommon=True
 StaticMeshActor.StaticMesh=True
 StaticMeshActor.Materials=True
 StaticMeshActor.Physics=True
@@ -1072,7 +1071,7 @@ AtmosphericFog.Activation=True
 AtmosphericFog.Cooking=True
 AtmosphericFog.Replication=True
 AtmosphericFog.Actor=True
-TriggerVolume.Mobile=False
+TriggerVolume.Mobile=True
 Level2_C.Tick=True
 Level2_C.Replication=True
 Level2_C.Actor=True
@@ -1238,6 +1237,112 @@ Coin_C.HLOD=True
 Coin_C.WorldPartition=True
 Coin_C.Events=True
 Coin_C.Cooking=True
+Coin_C.TransformCommon=True
+BP_Sky_Sphere_C.Cooking=True
+StaticMeshActor.LOD=True
+StaticMeshActor.RayTracing=True
+StaticMeshActor.TextureStreaming=True
+StaticMeshActor.MaterialParameters=True
+StaticMeshActor.Mobile=True
+StaticMeshActor.AssetUserData=True
+TriggerVolume.RayTracing=True
+TriggerVolume.AssetUserData=True
+StaticMeshComponent.LOD=True
+StaticMeshComponent.RayTracing=True
+StaticMeshComponent.TextureStreaming=True
+StaticMeshComponent.MaterialParameters=True
+StaticMeshComponent.Mobile=True
+StaticMeshComponent.AssetUserData=True
+Moving_Platform_C.ComponentTick=True
+Moving_Platform_C.Tags=True
+Moving_Platform_C.ComponentReplication=True
+Moving_Platform_C.Activation=True
+Moving_Platform_C.Variable=True
+Moving_Platform_C.Cooking=True
+Moving_Platform_C.AssetUserData=True
+Moving_Platform_C.Collision=True
+SceneComponent.Physics=True
+SceneComponent.LOD=True
+SceneComponent.AssetUserData=True
+SceneComponent.Collision=True
+NewActorComponent_C.ComponentTick=True
+NewActorComponent_C.Tags=True
+NewActorComponent_C.ComponentReplication=True
+NewActorComponent_C.Activation=True
+NewActorComponent_C.Variable=True
+NewActorComponent_C.Cooking=True
+NewActorComponent_C.AssetUserData=True
+NewActorComponent_C.Collision=True
+Moving_Platform_C.Tick=True
+Moving_Platform_C.Replication=True
+Moving_Platform_C.Rendering=True
+Moving_Platform_C.Actor=True
+Moving_Platform_C.Input=True
+Moving_Platform_C.HLOD=True
+Moving_Platform_C.WorldPartition=True
+Moving_Platform_C.Events=True
+Coin_C.Default=True
+Moving_Platform_C.TransformCommon=True
+Moving_Platform_C.Default=True
+Moving_Platform2_C.Default=True
+Moving_Platform2_C.Tick=True
+Moving_Platform2_C.Replication=True
+Moving_Platform2_C.Rendering=True
+Moving_Platform2_C.Collision=True
+Moving_Platform2_C.Actor=True
+Moving_Platform2_C.Input=True
+Moving_Platform2_C.HLOD=True
+Moving_Platform2_C.WorldPartition=True
+Moving_Platform2_C.Events=True
+Moving_Platform2_C.TransformCommon=True
+Moving_Platform2_C.Cooking=True
+Moving_Platform3_C.Default=True
+Moving_Platform3_C.Tick=True
+Moving_Platform3_C.Replication=True
+Moving_Platform3_C.Rendering=True
+Moving_Platform3_C.Collision=True
+Moving_Platform3_C.Actor=True
+Moving_Platform3_C.Input=True
+Moving_Platform3_C.HLOD=True
+Moving_Platform3_C.WorldPartition=True
+Moving_Platform3_C.Events=True
+Moving_Platform3_C.TransformCommon=True
+Moving_Platform3_C.Cooking=True
+SoundCue.Memory=True
+SoundCue.Sound=True
+SoundCue.Attenuation=True
+SoundCue.Effects=True
+SoundCue.Voice Management=True
+SoundCue.Developer=True
+AmbientSound.TransformCommon=True
+AmbientSound.Sound=True
+AmbientSound.Attenuation=True
+AmbientSound.Parameters=True
+AmbientSound.Subtitles=True
+AmbientSound.Attachment=True
+AmbientSound.Randomization=True
+AmbientSound.Analysis=True
+AmbientSound.Tags=True
+AmbientSound.AssetUserData=True
+AmbientSound.Activation=True
+AmbientSound.Cooking=True
+AmbientSound.Rendering=True
+AmbientSound.Replication=True
+AmbientSound.HLOD=True
+AmbientSound.Actor=True
+AudioComponent.TransformCommon=True
+AudioComponent.Sound=True
+AudioComponent.Parameters=True
+AudioComponent.Attenuation=True
+AudioComponent.Analysis=True
+AudioComponent.Attachment=True
+AudioComponent.Subtitles=True
+AudioComponent.Randomization=True
+AudioComponent.Tags=True
+AudioComponent.AssetUserData=True
+AudioComponent.Activation=True
+AudioComponent.Collision=True
+AudioComponent.Cooking=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Rolling/Materials/M_Pink_Checker.M_Pink_Checker=0
@@ -1276,6 +1381,8 @@ None=======
 /Engine/VREditor/LaserPointer/LaserPointerMaterial.LaserPointerMaterial=0
 /Game/Blueprints/Spike.Spike=0
 /Game/Blueprints/Coin.Coin=0
+/Game/StarterContent/Materials/M_Metal_Rust.M_Metal_Rust=0
+/Game/StarterContent/Audio/Starter_Background_Cue.Starter_Background_Cue=0
 
 [MaterialEditor]
 PrimType=1
@@ -1339,9 +1446,9 @@ bMaterialQualityUsed[3]=0
 
 [RootWindow]
 ScreenPosition=X=526.000 Y=276.000
-ScreenPosition=X=904.000 Y=232.000
+ScreenPosition=X=1133.000 Y=373.000
 WindowSize=X=1292.000 Y=732.000
-WindowSize=X=1309.600 Y=749.600
+WindowSize=X=1310.000 Y=750.000
 None=======
 InitiallyMaximized=True
 
@@ -1359,7 +1466,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/99gol/Documents/GitHub/OlsenG_BellC/HW1/Content/Maps
+UNR=E:/OlsenG_BellC/HW1/Content/Maps
 BRUSH=D:/Projects Cjbell/MyProject/RollingHW1 5.0 - 2/Content/
 FBX=D:/Projects Cjbell/MyProject/RollingHW1 5.0 - 2/Content/
 FBXAnim=D:/Projects Cjbell/MyProject/RollingHW1 5.0 - 2/Content/
@@ -2263,11 +2370,12 @@ LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
-MRUItem0=/Game/Maps/Level1
-MRUItem1=/Game/Maps/Level4
-MRUItem2=/Game/Maps/Level3
-MRUItem3=/Game/Maps/Level2
-MRUItem4=/Game/Maps/Untitled
+MRUItem0=/Game/Maps/Level5
+MRUItem1=/Game/Maps/Level1
+MRUItem2=/Game/Maps/Level2
+MRUItem3=/Game/Maps/Level3
+MRUItem4=/Game/Maps/Level4
+MRUItem5=/Game/Maps/Untitled
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -2402,14 +2510,27 @@ DataValidationSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTexture
 GameplayDebuggerUserSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
 GameplayTagsDeveloperSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
 LogVisualizerSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
-K2Node_VariableGet=
+K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
 KeyBindingsUI_C=
 MaterialInstanceConstant=
+StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,
+StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
+SceneComponent=
+Coin_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,
+BP_Sky_Sphere_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,
+Moving_Platform_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
+PropertyWrapper=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
+K2Node_VariableSet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
+K2Node_CustomEvent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
+K2Node=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
+Moving_Platform2_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
+Moving_Platform3_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
+AmbientSound=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,
 
 [DetailPropertyExpansion]
-TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+TriggerVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.ActionMappings.ActionMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[9]\" \"Object.Bindings.AxisMappings.AxisMappings[10]\" \"Object.Bindings.AxisMappings.AxisMappings[11]\" "
 Object=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -2440,12 +2561,31 @@ AutomationTestSettings="\"Object.Automation.BuildPromotionTest\" \"Object.Automa
 KeyBindingsUI_C=
 UserWidget=
 Coin_C=
+BP_Sky_Sphere_C="\"Object.Override settings.Zenith Color\" \"Object.Override settings.Horizon color\" \"Object.Override settings.Cloud color\" \"Object.Override settings.Overall Color\" "
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.WireframeColorOverride\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+StaticMeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent=
+ActorComponent=
+SoundCue="\"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Submix\" "
+SoundBase="\"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Submix\" "
+AmbientSound="\"Object.Sound.AudioComponent.Object.Randomization.Randomization|Pitch\" \"Object.Sound.AudioComponent.Object.Randomization.Randomization|Volume\" "
+AudioComponent="\"Object.Randomization.Randomization|Pitch\" \"Object.Randomization.Randomization|Volume\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Audio/Starter_Music01.Starter_Music01;
+RecentlyPlaced=/Game/StarterContent/Audio/Starter_Birds01.Starter_Birds01;
+RecentlyPlaced=/Game/StarterContent/Audio/Starter_Background_Cue.Starter_Background_Cue;
+RecentlyPlaced=/Game/Blueprints/Moving_Platform3.Moving_Platform3;
+RecentlyPlaced=/Game/Blueprints/Moving_Platform2.Moving_Platform2;
+RecentlyPlaced=/Game/Blueprints/Moving_Platform.Moving_Platform;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Rust.M_Metal_Rust;
+RecentlyPlaced=/Game/StarterContent/Architecture/SM_AssetPlatform.SM_AssetPlatform;
+RecentlyPlaced=/Game/Blueprints/Coin.Coin;
 RecentlyPlaced=/Game/Blueprints/Spike.Spike;/Engine/Transient.ActorFactoryBlueprint_0
 RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Gravel.M_Ground_Gravel;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Basic_Wall.M_Basic_Wall;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Rust.M_Metal_Rust;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Concrete_Tiles.M_Concrete_Tiles;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Gold.M_Metal_Gold;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Hex_Tile.M_Tech_Hex_Tile;
@@ -2454,14 +2594,6 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_Glass.M_Glass;
 RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Rough.M_CobbleStone_Rough;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_Old.M_Brick_Clay_Old;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Hex_Tile_Pulse.M_Tech_Hex_Tile_Pulse;
-RecentlyPlaced=/Game/StarterContent/Materials/M_ColorGrid_LowSpec.M_ColorGrid_LowSpec;
-RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Smooth.M_CobbleStone_Smooth;
-RecentlyPlaced=/Game/PhotoR_Backgrounds/Meshes/360d_Horizon/Afghan_Mountain_a/PR_afgan_mountain_a_D.PR_afgan_mountain_a_D;
-RecentlyPlaced=/Game/PhotoR_Backgrounds/Meshes/billboard.billboard;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Sandstone.M_Rock_Sandstone;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Marble_Polished.M_Rock_Marble_Polished;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Basalt.M_Rock_Basalt;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Moss.M_Ground_Moss;
 
 [MaterialInstanceEditor]
 bShowGrid=False
