--- a/HW1/Saved/Config/WindowsEditor/Input.ini
+++ b/HW1/Saved/Config/WindowsEditor/Input.ini
@@ -1,6 +1,7 @@
 [/Script/Engine.InputSettings]
-ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
 ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
+ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
+ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
 ActionMappings=(ActionName="StopRolling",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 ActionMappings=(ActionName="StopRolling",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
 AxisMappings=(AxisName="Look Up / Down Mouse",Scale=-1.000000,Key=MouseY)
@@ -12,7 +13,7 @@ AxisMappings=(AxisName="MoveLeftRightPrimary",Scale=1.000000,Key=A)
 AxisMappings=(AxisName="MoveLeftRightPrimary",Scale=-1.000000,Key=D)
 AxisMappings=(AxisName="MoveLeftRightSecondary",Scale=1.000000,Key=Left)
 AxisMappings=(AxisName="MoveLeftRightSecondary",Scale=-1.000000,Key=Right)
-AxisMappings=(AxisName="StopRolling",Scale=1.000000,Key=C)
 AxisMappings=(AxisName="StopRolling",Scale=1.000000,Key=LeftShift)
+AxisMappings=(AxisName="StopRolling",Scale=1.000000,Key=None)
 AxisMappings=(AxisName="Turn Right / Left Mouse",Scale=1.000000,Key=MouseX)
 
