--- a/HW1/Config/DefaultEngine.ini
+++ b/HW1/Config/DefaultEngine.ini
@@ -8,8 +8,9 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/Level1.Level1
-GameDefaultMap=/Game/Maps/Level1.Level1
+GameDefaultMap=/Game/Maps/Main_Menu.Main_Menu
 GlobalDefaultGameMode=/Game/Blueprints/RollingGameMode.RollingGameMode_C
+GameInstanceClass=/Game/Blueprints/RollingGame.RollingGame_C
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/Rolling")
