--- a/HW1/Config/DefaultInput.ini
+++ b/HW1/Config/DefaultInput.ini
@@ -82,11 +82,11 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
-+ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
-+ActionMappings=(ActionName="StopRolling",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
-+ActionMappings=(ActionName="StopRolling",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
++ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightControl)
++ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
++ActionMappings=(ActionName="StopRolling",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="StopRolling",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadZero)
 +AxisMappings=(AxisName="Look Up / Down Mouse",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MoveForwardBackPrimary",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForwardBackPrimary",Scale=1.000000,Key=W)
@@ -96,8 +96,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveLeftRightPrimary",Scale=-1.000000,Key=D)
 +AxisMappings=(AxisName="MoveLeftRightSecondary",Scale=1.000000,Key=Left)
 +AxisMappings=(AxisName="MoveLeftRightSecondary",Scale=-1.000000,Key=Right)
-+AxisMappings=(AxisName="StopRolling",Scale=1.000000,Key=C)
 +AxisMappings=(AxisName="StopRolling",Scale=1.000000,Key=LeftShift)
++AxisMappings=(AxisName="StopRolling",Scale=1.000000,Key=NumPadZero)
 +AxisMappings=(AxisName="Turn Right / Left Mouse",Scale=1.000000,Key=MouseX)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
