Coins and Cones

--- a/HW1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HW1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -137,7 +137,7 @@ bShowGrid=False
 
 [EditorStartup]
 LastLevel=/Game/Maps/Level5
-LastLevel=/Game/Maps/Main_Menu
+LastLevel=/Game/Maps/Level4
 None=======
 
 [AssetEditorSubsystem]
@@ -207,23 +207,23 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/Main_Menu
+MRUItem0=/Game/Maps/Level4
 MRUItem1=/Game/Maps/Level5
-MRUItem2=/Game/Maps/Level1
-MRUItem3=/Game/UI/Pause_Menu
-MRUItem4=/Game/UI/Start_Menu
-MRUItem5=/Game/Blueprints/bpSpherePawn
-MRUItem6=/Game/Blueprints/BP_PlayerController
-MRUItem7=/Game/UI/GameOver
-MRUItem8=/Game/UI/HUD_BP
-MRUItem9=/Game/UI/HUD
-MRUItem10=/Game/UI/Menu_Gamemode
-MRUItem11=/Game/UI/NewWidgetBlueprint
-MRUItem12=/Game/Blueprints/Moving_Platform
-MRUItem13=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem14=/Game/Maps/Level2
-MRUItem15=/Game/Maps/Level3
-MRUItem16=/Game/Maps/Level4
+MRUItem2=/Game/Maps/Level3
+MRUItem3=/Game/Maps/Level2
+MRUItem4=/Game/Maps/Main_Menu
+MRUItem5=/Game/Maps/Level1
+MRUItem6=/Game/UI/Pause_Menu
+MRUItem7=/Game/UI/Start_Menu
+MRUItem8=/Game/Blueprints/bpSpherePawn
+MRUItem9=/Game/Blueprints/BP_PlayerController
+MRUItem10=/Game/UI/GameOver
+MRUItem11=/Game/UI/HUD_BP
+MRUItem12=/Game/UI/HUD
+MRUItem13=/Game/UI/Menu_Gamemode
+MRUItem14=/Game/UI/NewWidgetBlueprint
+MRUItem15=/Game/Blueprints/Moving_Platform
+MRUItem16=/Engine/EditorBlueprintResources/StandardMacros
 MRUItem17=/Game/StarterContent/Audio/Starter_Background_Cue
 MRUItem18=/Game/Blueprints/Moving_Platform3
 MRUItem19=/Game/Blueprints/Moving_Platform2
@@ -2467,12 +2467,12 @@ LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
-MRUItem0=/Game/Maps/Main_Menu
+MRUItem0=/Game/Maps/Level4
 MRUItem1=/Game/Maps/Level5
-MRUItem2=/Game/Maps/Level1
+MRUItem2=/Game/Maps/Level3
 MRUItem3=/Game/Maps/Level2
-MRUItem4=/Game/Maps/Level3
-MRUItem5=/Game/Maps/Level4
+MRUItem4=/Game/Maps/Level1
+MRUItem5=/Game/Maps/Main_Menu
 MRUItem6=/Game/Maps/Untitled
 
 [LightingBuildOptions]
@@ -2629,6 +2629,9 @@ Pause_Menu_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physic
 EdGraph=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
 Start_Menu_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
 GameOver_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
+Spike_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
+TriggerVolume=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,
+BrushComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,
 
 [DetailPropertyExpansion]
 TriggerVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2679,6 +2682,8 @@ Image="\"Object.Appearance.Brush\" "
 ProgressBar="\"Object.Appearance.FillColorAndOpacity\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Spike.Spike;
+RecentlyPlaced=/Game/Blueprints/Coin.Coin;
 RecentlyPlaced=/Game/StarterContent/Audio/Starter_Music01.Starter_Music01;
 RecentlyPlaced=/Game/StarterContent/Audio/Starter_Birds01.Starter_Birds01;
 RecentlyPlaced=/Game/StarterContent/Audio/Starter_Background_Cue.Starter_Background_Cue;
@@ -2687,8 +2692,6 @@ RecentlyPlaced=/Game/Blueprints/Moving_Platform2.Moving_Platform2;
 RecentlyPlaced=/Game/Blueprints/Moving_Platform.Moving_Platform;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Rust.M_Metal_Rust;
 RecentlyPlaced=/Game/StarterContent/Architecture/SM_AssetPlatform.SM_AssetPlatform;
-RecentlyPlaced=/Game/Blueprints/Coin.Coin;
-RecentlyPlaced=/Game/Blueprints/Spike.Spike;/Engine/Transient.ActorFactoryBlueprint_0
 RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Gravel.M_Ground_Gravel;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Basic_Wall.M_Basic_Wall;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Concrete_Tiles.M_Concrete_Tiles;
