--- a/HW1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HW1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -67,7 +67,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=14,Y=6)
+NewWindowPosition=(X=0,Y=0)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -95,7 +95,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1914,Y=1040)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@KUIIL
 LastExecutedLaunchName=KUIIL
 LastExecutedPIEPreviewDevice=
@@ -103,7 +103,7 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=1914
 NewWindowHeight=1040
-MultipleInstancePositions=(X=14,Y=6)
+MultipleInstancePositions=(X=0,Y=0)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -137,11 +137,12 @@ bShowGrid=False
 
 [EditorStartup]
 LastLevel=/Game/Maps/Level5
-LastLevel=/Game/Maps/Main_Menu
+LastLevel=/Game/Maps/Level1
 None=======
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/UI/Pause_Menu.Pause_Menu
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -161,7 +162,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/UI
+ContentBrowserDrawer.SelectedPaths=/Game/Maps
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -207,26 +208,26 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/bpSpherePawn
-MRUItem1=/Game/Blueprints/RollingGameMode
-MRUItem2=/Game/Blueprints/RollingSaveGame
-MRUItem3=/Game/Maps/Main_Menu
-MRUItem4=/Game/UI/Pause_Menu
+MRUItem0=/Game/UI/Pause_Menu
+MRUItem1=/Game/UI/Results
+MRUItem2=/Game/Maps/Main_Menu
+MRUItem3=/Game/Maps/Level1
+MRUItem4=/Game/Maps/Level4
 MRUItem5=/Game/UI/Start_Menu
-MRUItem6=/Game/UI/HUD_Display
-MRUItem7=/Game/Blueprints/SaveGame
-MRUItem8=/Game/Blueprints/Spike
-MRUItem9=/Game/Blueprints/Coin
-MRUItem10=/Game/UI/KeyBindingsUI
-MRUItem11=/Game/Blueprints/RollingGame
-MRUItem12=/Game/Blueprints/Moving_Platform3
-MRUItem13=/Game/Blueprints/Moving_Platform2
-MRUItem14=/Game/Blueprints/Moving_Platform
-MRUItem15=/Game/Maps/Level1
-MRUItem16=/Game/UI/Menu_Gamemode
-MRUItem17=/Game/UI/GameOver
-MRUItem18=/Game/Blueprints/KeyBindingsUI
-MRUItem19=/Game/ExampleContent/Blueprints/Meshes/SM_Pickup_Coin
+MRUItem6=/Game/UI/GameOver
+MRUItem7=/Game/Blueprints/bpSpherePawn
+MRUItem8=/Game/Blueprints/RollingGame
+MRUItem9=/Game/Blueprints/RollingGameMode
+MRUItem10=/Game/Maps/Level5
+MRUItem11=/Game/Maps/Level3
+MRUItem12=/Game/Maps/Level2
+MRUItem13=/Game/Blueprints/RollingSaveGame
+MRUItem14=/Game/UI/HUD_Display
+MRUItem15=/Game/Blueprints/SaveGame
+MRUItem16=/Game/Blueprints/Spike
+MRUItem17=/Game/Blueprints/Coin
+MRUItem18=/Game/UI/KeyBindingsUI
+MRUItem19=/Game/Blueprints/Moving_Platform3
 
 [DetailCategories]
 PreviewMaterial.PhysicalMaterial=True
@@ -1465,6 +1466,23 @@ HUD_Display_C.Clipping=True
 HUD_Display_C.Navigation=True
 AmbientSound.Concurrency=True
 RollingSaveGame_C.Default=True
+Level1_C.Default=True
+Level2_C.Default=True
+Level3_C.Default=True
+Level4_C.Default=True
+Results_C.Appearance=True
+Results_C.Designer=True
+Results_C.Input=True
+Results_C.Interaction=True
+Results_C.Performance=True
+Results_C.Layout=True
+Results_C.Behavior=True
+Results_C.Render Transform=True
+Results_C.Localization=True
+Results_C.Accessibility=True
+Results_C.Clipping=True
+Results_C.Navigation=True
+RollingGame_C.Default=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Rolling/Materials/M_Pink_Checker.M_Pink_Checker=0
@@ -1521,6 +1539,7 @@ None=======
 /Game/UI/KeyBindingsUI.KeyBindingsUI=0
 /Game/Blueprints/RollingSaveGame.RollingSaveGame=0
 /Game/Blueprints/RollingGame.RollingGame=0
+/Game/UI/Results.Results=0
 
 [MaterialEditor]
 PrimType=1
@@ -1586,7 +1605,7 @@ bMaterialQualityUsed[3]=0
 ScreenPosition=X=526.000 Y=276.000
 ScreenPosition=X=108.800 Y=52.800
 WindowSize=X=1292.000 Y=732.000
-WindowSize=X=1322.400 Y=762.400
+WindowSize=X=1325.600 Y=765.600
 None=======
 InitiallyMaximized=True
 
@@ -2512,10 +2531,10 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/Control
 [MRU]
 MRUItem0=/Game/Maps/Main_Menu
 MRUItem1=/Game/Maps/Level1
-MRUItem2=/Game/Maps/Level5
-MRUItem3=/Game/Maps/Level2
+MRUItem2=/Game/Maps/Level4
+MRUItem3=/Game/Maps/Level5
 MRUItem4=/Game/Maps/Level3
-MRUItem5=/Game/Maps/Level4
+MRUItem5=/Game/Maps/Level2
 MRUItem6=/Game/Maps/Untitled
 
 [LightingBuildOptions]
@@ -2655,8 +2674,8 @@ K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.
 KeyBindingsUI_C=
 MaterialInstanceConstant=
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,
-StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
-SceneComponent=
+StaticMeshComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,
+SceneComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,
 Coin_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,
 BP_Sky_Sphere_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,
 Moving_Platform_C=
@@ -2680,13 +2699,20 @@ Spike_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.Con
 K2Node_InputAction=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
 K2Node_FunctionEntry=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
 Level1_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
-RollingGame_C=
+RollingGame_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
 PushToInstance=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
 K2Node_Variable=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
 K2Node_MacroInstance=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
 SaveGame_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
 RollingSaveGame_C=
 K2Node_CallFunction=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
+Actor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,
+TriggerVolume=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,
+BrushComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,
+Level2_C=
+Level3_C=
+Level4_C=
+Results_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
 
 [DetailPropertyExpansion]
 TriggerVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2703,8 +2729,8 @@ DeveloperSettings=
 Border="\"Object.Appearance.Background\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" "
 PanelWidget="\"Object.Appearance.WidgetStyle\" "
-Widget="\"Object.Appearance.Brush\" "
-Visual="\"Object.Appearance.Brush\" "
+Widget=
+Visual=
 VerticalBox=
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
