--- a/HW1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HW1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -95,7 +95,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1914,Y=1040)
 LastExecutedLaunchDevice=Windows@KUIIL
 LastExecutedLaunchName=KUIIL
 LastExecutedPIEPreviewDevice=
@@ -142,7 +142,6 @@ None=======
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/UI/Pause_Menu.Pause_Menu
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -208,25 +207,25 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/Pause_Menu
-MRUItem1=/Game/UI/Results
-MRUItem2=/Game/Maps/Main_Menu
-MRUItem3=/Game/Maps/Level1
-MRUItem4=/Game/Maps/Level4
-MRUItem5=/Game/UI/Start_Menu
-MRUItem6=/Game/UI/GameOver
-MRUItem7=/Game/Blueprints/bpSpherePawn
-MRUItem8=/Game/Blueprints/RollingGame
-MRUItem9=/Game/Blueprints/RollingGameMode
-MRUItem10=/Game/Maps/Level5
-MRUItem11=/Game/Maps/Level3
-MRUItem12=/Game/Maps/Level2
-MRUItem13=/Game/Blueprints/RollingSaveGame
-MRUItem14=/Game/UI/HUD_Display
-MRUItem15=/Game/Blueprints/SaveGame
-MRUItem16=/Game/Blueprints/Spike
-MRUItem17=/Game/Blueprints/Coin
-MRUItem18=/Game/UI/KeyBindingsUI
+MRUItem0=/Game/UI/GameOver
+MRUItem1=/Game/Blueprints/RollingGame
+MRUItem2=/Game/UI/Start_Menu
+MRUItem3=/Game/Blueprints/RollingGameMode
+MRUItem4=/Game/UI/Results
+MRUItem5=/Game/UI/KeyBindingsUI
+MRUItem6=/Game/UI/Pause_Menu
+MRUItem7=/Game/Maps/Main_Menu
+MRUItem8=/Game/Maps/Level1
+MRUItem9=/Game/Maps/Level4
+MRUItem10=/Game/Blueprints/bpSpherePawn
+MRUItem11=/Game/Maps/Level5
+MRUItem12=/Game/Maps/Level3
+MRUItem13=/Game/Maps/Level2
+MRUItem14=/Game/Blueprints/RollingSaveGame
+MRUItem15=/Game/UI/HUD_Display
+MRUItem16=/Game/Blueprints/SaveGame
+MRUItem17=/Game/Blueprints/Spike
+MRUItem18=/Game/Blueprints/Coin
 MRUItem19=/Game/Blueprints/Moving_Platform3
 
 [DetailCategories]
@@ -1605,7 +1604,7 @@ bMaterialQualityUsed[3]=0
 ScreenPosition=X=526.000 Y=276.000
 ScreenPosition=X=108.800 Y=52.800
 WindowSize=X=1292.000 Y=732.000
-WindowSize=X=1325.600 Y=765.600
+WindowSize=X=1327.200 Y=767.200
 None=======
 InitiallyMaximized=True
 
@@ -2529,8 +2528,8 @@ LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
-MRUItem0=/Game/Maps/Main_Menu
-MRUItem1=/Game/Maps/Level1
+MRUItem0=/Game/Maps/Level1
+MRUItem1=/Game/Maps/Main_Menu
 MRUItem2=/Game/Maps/Level4
 MRUItem3=/Game/Maps/Level5
 MRUItem4=/Game/Maps/Level3
@@ -2699,7 +2698,7 @@ Spike_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.Con
 K2Node_InputAction=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
 K2Node_FunctionEntry=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
 Level1_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
-RollingGame_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
+RollingGame_C=
 PushToInstance=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
 K2Node_Variable=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
 K2Node_MacroInstance=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,
