--- a/HW1/Config/DefaultEngine.ini
+++ b/HW1/Config/DefaultEngine.ini
@@ -7,7 +7,7 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Level1.Level1
+EditorStartupMap=/Game/Maps/Main_Menu.Main_Menu
 GameDefaultMap=/Game/Maps/Main_Menu.Main_Menu
 GlobalDefaultGameMode=/Game/Blueprints/RollingGameMode.RollingGameMode_C
 GameInstanceClass=/Game/Blueprints/RollingGame.RollingGame_C
